tests/e2e/allinone-ingress/01-check-ingress.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: "go run ../../assert-jobs/allinone_ingress.go"
