tests/e2e/allinone-ingress/01-report-span.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: report-span
spec:
  template:
    spec:
      containers:
        - name: asserts-container
          image: local/asserts:e2e
          command: ["./reporter"]
          env:
            - name: JAEGER_SERVICE_NAME
              value: "my-test-service"
            - name: OPERATION_NAME
              value: "my-little-op"
            - name: JAEGER_ENDPOINT
              value: "http://my-jaeger-collector-headless:14268/api/traces"
      restartPolicy: OnFailure
  backoffLimit: 10
