tests/e2e/allinone-ingress/02-check-ingress.yaml
# Check the spans were reported successfully and Jaeger query is reachable from
# localhost
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: "go run ../../assert-jobs/query/main.go --service-name=my-test-service"
