tests/e2e/allinone-ingress/00-assert.yaml
# Assert there is an ingress entry for the Jaeger query
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-jaeger-query
status:
  loadBalancer:
    ingress:
      - hostname: localhost
