tests/e2e/allinone-ingress/01-assert.yaml
# Assert the spans are reported
apiVersion: batch/v1
kind: Job
metadata:
  name: report-span
status:
  succeeded: 1
